[package]
name = "hypervector"
version = "0.1.0"
edition = "2021"
authors = ["Rishikanth Chandrasekaran <rishikanthc@gmail.com>"]
description = "A crate that implements hyperdimensional vectors and VSAs."
license = "MIT"
repository = "https://github.com/rishikanthc/hypervector"
readme = "README.md"
documentation = "https://docs.rs/hypervector"

[dependencies]
once_cell = "1.17"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
plotters = "0.3"
rand_distr = "0.4"
num-complex = "0.4"
rustfft = "6.1"
num-traits = "0.2"
ndarray = "0.15"
statrs = "0.16"
nalgebra = "*"
ndarray-rand = "0.14"
argmin = "0.10"
ndarray-linalg = "0.16"
ndarray-stats = "0.5"
approx = "0.5"
serde_json = "1.0"
