[package]
name = "hypervector"
version = "0.1.1"
edition = "2021"
authors = ["Rishikanth Chandrasekaran <rishikanthc@gmail.com>"]
description = "A crate that implements hyperdimensional vectors and VSAs."
license = "MIT"
repository = "https://github.com/rishikanthc/hypervector"
readme = "README.md"
documentation = "https://docs.rs/hypervector"
keywords = ["hyperdimensional", "VSA", "MBAT", "SSP", "FHRR"]
categories = ["algorithms", "data-structures"]


[dependencies]
once_cell = "1.17"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
plotters = "0.3"
rand_distr = "0.4"
num-complex = "0.4"
serde_json = "1.0"
